# rag-course

./: .gitignore  README.md  pyproject.toml  requirements.txt
1-LangChain_for_RAG/: 01_lc_fundamentals.ipynb  02_doc_loaders.ipynb  03_text_splitting_strategies.ipynb  04_vector_stores.ipynb  05_retrieval_strategies.ipynb  06_complete_rag_pipeline.ipynb  07_rag_eval.ipynb  07_ragas_eval.ipynb
1-LangChain_for_RAG/.deepeval/: .deepeval-cache.json  .latest_run_full.json  .latest_test_run.json
1-LangChain_for_RAG/chroma_db_notebook/: chroma.sqlite3
1-LangChain_for_RAG/faiss_index_notebooks/: index.faiss  index.pkl
1-LangChain_for_RAG/rag_vectorstore/: index.faiss  index.pkl
1-LangChain_for_RAG/sample_data/: notes.txt
2-DocParsers/: docling-parsers.ipynb
2-DocParsers/output/: docling_paper.html  docling_paper.md  docling_parser.json
3-pydantic-fastapi/: pydantic_tutorial.ipynb
3-pydantic-fastapi/calculator_v2/: app.py  calculator.py
