[project]
name = "rag-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "datasets>=4.8.5",
    "faiss-cpu>=1.14.2",
    "groq>=0.37.1",
    "ipykernel>=7.2.0",
    "jq>=1.11.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "lxml>=6.1.1",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "opik>=2.0.46",
    "pandas>=3.0.3",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "ragas>=0.3.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "unstructured>=0.22.31",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
