[project]
name = "rag-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "datasets>=4.8.5",
    "docling>=2.96.1",
    "docling-core[chunking]>=2.78.0",
    "faiss-cpu>=1.14.2",
    "ipykernel>=7.2.0",
    "jq>=1.11.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-docling>=2.0.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "llama-cloud-services>=0.6.94",
    "llama-index>=0.14.22",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-llms-openai>=0.7.9",
    "llama-index-vector-stores-chroma>=0.5.5",
    "llama-parse>=0.6.94",
    "lxml>=6.1.1",
    "matplotlib>=3.10.9",
    "nest-asyncio>=1.6.0",
    "notebook>=7.5.6",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "opik>=2.0.54",
    "pandas>=3.0.3",
    "pdfminer-six>=20260107",
    "pi-heif>=1.3.0",
    "pillow>=12.2.0",
    "pypdf>=6.12.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "ragas>=0.4.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "transformers>=5.9.0",
    "unstructured>=0.22.31",
    "unstructured-inference>=1.6.11",
    "vectorize-client>=0.4.0",
]
